# Household-Robot

./: README.md
asr_ftc_local_planner/: CMakeLists.txt
asr_ftc_local_planner/src/: ftc_planner.cpp  join_costmap.cpp  transform_global_plan.cpp
asr_move_base/: CMakeLists.txt
asr_move_base/src/: ftc_planner.cpp  join_costmap.cpp  move_base.cpp  transform_global_plan.cpp
motion_planner_3d/: CMakeLists.txt
motion_planner_3d/launch/: launch_rrt.launch  octo_mapping.launch  octo_server.launch
motion_planner_3d/maps/: 002.ot  color.bt
motion_planner_3d/src/: 3d_rrt_star.cpp  3d_rrt_test.cpp
robot_arm/: CMakeLists.txt
robot_arm/action/: control.action  time_control.action
robot_arm/launch/: robot_arm_driver.launch
robot_arm/msg/: arm_movement.msg  blue_control.msg
robot_arm/src/: robot_arm_driver.py  robot_control.py
robot_arm/srv/: arm_position.srv
robot_deep_learning/: CMakeLists.txt
robot_deep_learning/launch/: detect_body_landmarks.launch  detect_faces.launch  detect_nearest_mouth.launch  detect_objects.launch
robot_deep_learning/nodes/: deep_learning_model_options.py  detect_faces_python3.py  detect_nearest_mouth_python3.py  detection_2d_to_3d_python3.py  detection_node_python3.py  detection_ros_markers_python3.py  (+4 more)
robot_laser_follower/: CMakeLists.txt
robot_manipulation/: CMakeLists.txt
robot_nav_depthcamera_rs/: CMakeLists.txt
robot_pcl/: CMakeLists.txt
semantic_map_server/: CMakeLists.txt
third_packages/rocon_std_msgs/: CMakeLists.txt
third_packages/rocon_std_msgs/msg/: StringArray.msg
xtark_kcf_tracker/: CMakeLists.txt
(+139 files in other folders)
